<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="owlsnest_title">OwlsNest</string>
    <string name="aosip_title">AOSiP Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure look &amp; feel of recent apps view</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock &amp; date</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title">Weather options</string>
    <string name="lockscreen_weather_summary">Configure lockscreen weather</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to AOSiP</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dummy_string"> </string>
    <string name="active_edge_title">Active Edge</string>
    <string name="ambient_music_display">Music ticker</string>
    <string name="aware_settings_title">Motion Sense</string>
    <string name="battery_style_statusbar">Statusbar battery</string>
    <string name="battery_style_qs">Quick panel battery</string>
    <string name="brightness_control_category">Brightness control</string>
    <string name="custom_header_title">Custom header</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_battery_title">Battery LED</string>
    <string name="lockscreen_visualizer_enable">Music Visualizer</string>
    <string name="qs_panel_layout_category">QS panel layout</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="power_menu_category">Power menu</string>
    <string name="pulse_settings">Pulse</string>
    <string name="aosip_about_title">About AOSiP</string>
    <string name="aosip_about_summary">A little info about the team</string>
    <string name="aosip_telegram_title">AOSiP Telegram Community</string>
    <string name="aosip_telegram_summary"><a href="https://t.me/s/aosip">Join our wonderful community here!</a></string>
    <string name="aosip_gerrit_title">AOSiP Gerrit</string>
    <string name="aosip_gerrit_summary"><a href="https://review.aosip.dev/q/status:merged">View our gerrit to see the latest commits</a></string>
    <string name="aosip_github_title">AOSiP Github</string>
    <string name="aosip_github_summary"><a href="https://www.github.com/AOSiP">See the AOSiP source code here!</a></string>
    <string name="aosip_about_info_summary">AOSiP stands for Android Open Source illusion Project. We are an AOSP based custom ROM, twisted with the latest features from all over the Android development community. Quality and stability is our first priority as we are dedicated to bringing you the very best that Android has to offer.</string>
    <string name="aosip_about_team">Team Illusion</string>
    <string name="aosip_about_josh" translatable="false">Josh Fox (XlxFoXxlX)</string>
    <string name="aosip_about_josh_summary" translatable="false">Lead Derp</string>
    <string name="aosip_about_akhil" translatable="false">Akhil Narang</string>
    <string name="aosip_about_akhil_summary" translatable="false">Server/gerrit guru</string>
    <string name="aosip_about_anirudh" translatable="false">Anirudh Gupta</string>
    <string name="aosip_about_anirudh_summary" translatable="false">Team shit poster</string>
    <string name="aosip_about_harsh" translatable="false">Harsh Shandilya</string>
    <string name="aosip_about_harsh_summary" translatable="false">Local mean boi</string>
    <string name="aosip_about_caleb">Caleb (calebcabob/Calphonic</string>
    <string name="aosip_about_caleb_summary" translatable="false">Code breaker from Boston</string>
    <string name="about_maintainer">Maintainer</string>
    <string name="aosip_about_maintainer">The maintainer for your device is</string>
    <string name="aosip_about_maintainer_summary" translatable="false">Kronic the Owl</string>
    <string name="aosip_version">AOSiP version</string>
    <string name="aosip_version_default">Unknown</string>
    <string name="advanced_behavior_title">Advanced behavior</string>
    <string name="appearance_category">APPEARANCE</string>
    <string name="behavior_category">BEHAVIOR</string>
    <string name="simple_category">SIMPLE</string>
    <string name="advanced_category">ADVANCED</string>
    <string name="enable_first">Please enable first</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="battery_percent_title">Statusbar battery indicator</string>
    <string name="battery_percent_summary">Configure icon and text styles for the statusbar battery indicator</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_filled_circle">Filled circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="qs_battery_percentage_title">QS battery percentage</string>
    <string name="qs_battery_percentage_summary">Show battery percentage in the QS header instead of battery estimate</string>
    <string name="status_bar_clock_pos_title">Position</string>
    <string name="status_bar_clock_pos_right">Right</string>
    <string name="status_bar_clock_pos_center">Center</string>
    <string name="status_bar_clock_pos_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="status_bar_clock_title">Clock &amp; date</string>
    <string name="status_bar_clock_summary">Customize clock &amp; date</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_clock_position_title">Clock style</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_hidden">Hidden</string>
    <string name="status_bar_clock_auto_hide_title">Auto-hide</string>
    <string name="status_bar_clock_auto_hide_summary">Hide and display clock for regular interval to save statusbar space</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide clock</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="lockscreen_media_art_title">Lockscreen media art</string>
    <string name="lockscreen_media_art_summary">Display media cover art when playing music</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="lockscreen_charge_temp_unit_title">Temperature unit</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
</resources>