<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2020 AOSiP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_general_title" >

    <!-- FOD recognizing animation -->
    <PreferenceCategory
        android:key="fod_category"
        android:title="FOD"
        android:order="9999">
    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="fod_recognizing_animation"
        android:title="@string/fod_recog_animation"
        android:summary="@string/fod_recog_animation_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SecureSettingListPreference
        android:key="fod_recognizing_animation_list"
        android:title="@string/fod_recog_animation_effect_title"
        android:summary="%s"
        android:entries="@array/fod_recog_animation_entries"
        android:entryValues="@array/fod_recog_animation_values"
        android:defaultValue="12"
        android:dependency="fod_recognizing_animation" />
    </PreferenceCategory>

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingListPreference
        android:key="lockscreen_charge_temp_unit"
        android:title="@string/lockscreen_charge_temp_unit_title"
        android:entries="@array/lockscreen_charge_temp_unit_entries"
        android:entryValues="@array/lockscreen_charge_temp_unit_values"
        android:defaultValue="0"
        android:dependency="lockscreen_battery_info" />

        <PreferenceCategory
            android:key="lockscreen_media_art_options"
            android:title="@string/lockscreen_media_art_options_title"
            android:order="999">
            <com.aosip.support.preference.SecureSettingSwitchPreference
                android:key="lockscreen_media_metadata"
                android:title="@string/lockscreen_media_art_title"
                android:summary="@string/lockscreen_media_art_summary"
                android:defaultValue="false" />

            <com.aosip.support.preference.CustomSystemSeekBarPreference
                android:key="lockscreen_media_blur"
                android:title="@string/lockscreen_media_blur_title"
                android:dependency="lockscreen_media_metadata"
                settings:allowEditText="true"
                android:max="25"
                android:min="0"
                android:defaultValue="25"
                settings:units="dp"/>
        </PreferenceCategory>

</PreferenceScreen>
